--- a/articulo.html
+++ b/articulo.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Este es el primer post del articulo</h1>
         <p>recuerda que esta es ña version 1</p>
+        <p>Creando una nueva rama para aprender de git y como funciona</p>
     </body>
 </html>
