creacion de la cabecera

--- a/articulo.html
+++ b/articulo.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="css/archivos.css">
     </head>
     <body>
+        <div id= cabecera>
+            cabecera
         <h1>Este es el primer post del articulo</h1>
         <p>recuerda que esta es ña version 1</p>
         <p>Creando una nueva rama para aprender de git y como funciona</p>
