--- a/articulo.html
+++ b/articulo.html
@@ -9,5 +9,6 @@
         <h1>Este es el primer post del articulo</h1>
         <p>recuerda que esta es ña version 1</p>
         <p>Creando una nueva rama para aprender de git y como funciona</p>
+        <p>actualizando la cabecera para ver la diferencia entre ramas</p>
     </body>
 </html>
