--- a/articulo.html
+++ b/articulo.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h1>Este es el primer post del articulo</h1>
-        <p>recuerda que esta es ña version 1</p>
+        <p>recuerda que esta es la version 1</p>
         <p>Creando una nueva rama para aprender de git y como funciona</p>
+        <h3>Estos son los nuevos cambios en la rama master para entender el flujo de trabajo entre las dos ramas</h3>
     </body>
 </html>
