esta es la version ejemplo

--- a/articulo.html
+++ b/articulo.html
@@ -14,6 +14,6 @@
 =======
         <p>actualizando la cabecera para ver la diferencia entre ramas</p>
         <p>Este es un texto echo luego del merge para vereficar que se este trabajanado en la rama correcta</p>
->>>>>>> cabecera
+        <h5>ESTA ES LA RAMA EJEMPLO</h5>
     </body>
 </html>
