una verion mejorada

--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>EL titulo 2</title>
+        <title>EL titulo 3 con mas sabor que nunca</title>
         <link rel="stylesheet" href="css/archivos.css">
     </head>
     <body>
@@ -9,9 +9,9 @@
         <h1>Este es el primer post del articulo</h1>
         <p>recuerda que esta es la version 1</p>
         <p>Creando una nueva rama para aprender de git y como funciona</p>
-<<<<<<< HEAD
+
         <h3>Estos son los nuevos cambios en la rama master para entender el flujo de trabajo entre las dos ramas</h3>
-=======
+
         <p>actualizando la cabecera para ver la diferencia entre ramas</p>
         <p>Este es un texto echo luego del merge para vereficar que se este trabajanado en la rama correcta</p>
         <h5>ESTA ES LA RAMA EJEMPLO</h5>
