--- a/articulo.html
+++ b/articulo.html
@@ -15,5 +15,6 @@
         <p>actualizando la cabecera para ver la diferencia entre ramas</p>
         <p>Este es un texto echo luego del merge para vereficar que se este trabajanado en la rama correcta</p>
         <h5>ESTA ES LA RAMA EJEMPLO</h5>
+        <p>Progrando los pull request</p>
     </body>
 </html>
