creando el commit el pull request

--- a/articulo.html
+++ b/articulo.html
@@ -16,5 +16,6 @@
         <p>Este es un texto echo luego del merge para vereficar que se este trabajanado en la rama correcta</p>
         <h5>ESTA ES LA RAMA EJEMPLO</h5>
         <p>Progrando los pull request</p>
+        <p>Creando cambios para el pull request</p>
     </body>
 </html>
