--- a/articulo.html
+++ b/articulo.html
@@ -19,5 +19,6 @@
         <p>Creando cambios para el pull request</p>
         <p>Probando la rama main</p>
         <p>este es un ejemplo utilizando git rebase</p>
+        <p>hola</p>
     </body>
 </html>
