probando el stash

--- a/articulo.html
+++ b/articulo.html
@@ -20,5 +20,6 @@
         <p>Probando la rama main</p>
         <p>este es un ejemplo utilizando git rebase</p>
         <p>hola</p>
+        <p>esta es una prueba con stash</p>
     </body>
 </html>
